--- a/templates/sales/sale_update.html
+++ b/templates/sales/sale_update.html
@@ -22,7 +22,7 @@
                         {% csrf_token %}
 
                         <div class="mb-3">
-                            果物
+                            Fruit
                             <input class="form-control" type="text" placeholder="{{ sale.fruit_name }}" readonly>
                         </div>
 
