--- a/templates/stock/stock_create.html
+++ b/templates/stock/stock_create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block page-trail %}&nbsp;&nbsp;>&nbsp;&nbsp;Create New Stock{% endblock page-trail %}
+{% block page-trail %}&nbsp;&nbsp;>&nbsp;&nbsp;New Stock{% endblock page-trail %}
 
 {% block content %}
 
@@ -12,7 +12,7 @@
             <div class="card">
 
                 <div class="card-header">
-                    New Fruit
+                    New Stock
                 </div>
 
                 <div class="card-body">
