--- a/templates/base.html
+++ b/templates/base.html
@@ -5,15 +5,20 @@
 
 <head>
     <meta charset="utf-8">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- Bootstrap icons -->
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <!-- Font -->
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap">
     <!-- Custom CSS -->
+
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
     <title>Fruit Store Inventory</title>
 </head>
 
@@ -23,7 +28,11 @@
         <div class="container-fluid">
             <div class="row">
 
+                <!-- Navigation sidebar -->
+
                 <div class="sidebar">
+
+                    <!-- Navigation links -->
 
                     <a class="nav-link {% if request.resolver_match.url_name == 'home' %}nav-link-active{% endif %}" href="{% url 'home' %}"><i class="bi bi-house"></i>&nbsp;&nbsp;Home</a>
 
@@ -33,6 +42,8 @@
 
                     <a class="nav-link {% if request.resolver_match.url_name == 'stats_list' %}nav-link-active{% endif %}" href="{% url 'stats_list' %}"><i class="bi bi-graph-up"></i>&nbsp;&nbsp;Statistics</a>
 
+                    <!-- Display logout button if logged in -->
+
                     {% if user.is_authenticated %}
                         <a class="nav-link logout" href="{% url 'logout' %}"><i class="bi bi-box-arrow-right"></i>&nbsp;&nbsp;Log out</a>
                     {% endif %}
@@ -41,9 +52,13 @@
 
                 <div class="col main-col">
 
+                    <!-- Display login credentials if not logged in -->
+
                     {% if not user.is_authenticated %}
                         <p class="login-info">Username = admin<br>Password = fruit1234</p>
                     {% endif %}
+
+                    <!-- Top banner and page trail -->
 
                     <div class="banner">
                         <h5>Fruit Store Inventory{% block page-trail %}{% endblock page-trail %}</h5>
@@ -62,7 +77,9 @@
     </main>
 
     <!-- Bootstrap JavaScript bundle with Popper -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
