--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -27,19 +27,19 @@
                             </div>
                         {% endif %}
 
-                        <!-- ユーザー名入力フィールド -->
+                        <!-- Username input field -->
                         <div class="form-row mb-2">
                             <label for="{{ form.username.id_for_label }}" class="form-label">Username</label>
                             <input id="{{ form.username.id_for_label }}" name="{{ form.username.html_name }}" type="text" class="form-control">
                         </div>
 
-                        <!-- パスワード入力フィールド -->
+                        <!-- Password input field -->
                         <div class="form-row mb-2">
                             <label for="{{ form.password.id_for_label }}" class="form-label">Password</label>
                             <input id="{{ form.password.id_for_label }}" name="{{ form.password.html_name }}" type="password" class="form-control">
                         </div>
 
-                        <!-- ログインボタン -->
+                        <!-- Login button -->
                         <div class="text-center mt-3">
                             <button type="submit" class="btn btn-primary">Log in</button>
                         </div>
