--- a/templates/sales/sale_create.html
+++ b/templates/sales/sale_create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block page-trail %}&nbsp;&nbsp;>&nbsp;&nbsp;Add New Sale{% endblock page-trail %}
+{% block page-trail %}&nbsp;&nbsp;>&nbsp;&nbsp;New Sale{% endblock page-trail %}
 
 {% block content %}
 
