--- a/templates/stock/stock_update.html
+++ b/templates/stock/stock_update.html
@@ -12,7 +12,7 @@
             <div class="card">
 
                 <div class="card-header">
-                    Update Fruit
+                    Update Stock
                 </div>
 
                 <div class="card-body">
