--- a/templates/stock/stock_list.html
+++ b/templates/stock/stock_list.html
@@ -55,7 +55,7 @@
                                         <!-- Edit icon -->
                                         <a href="{% url 'stock_update' fruit.pk %}"  class="btn btn-outline-primary btn-sm mr-2" role="button">Update</a>
                                         &nbsp;
-                                        
+
                                         <!-- Delete icon -->
                                         <form action="{% url 'stock_delete' fruit.pk %}" method="POST" style="display:inline">
                                             {% csrf_token %}
@@ -75,11 +75,51 @@
                 </div>
 
                 <!-- Button to add new stock -->
-                <div class="text-center">
+
+                <div class="table-footer-buttons">
                     <a href="{% url 'stock_create' %}"  class="btn btn-primary" role="button">Add New Stock</a>
                 </div>
 
-            <!-- If there is stock information, display a notification -->
+                <!-- Pagination controls -->
+
+                {% if fruits.has_other_pages %}
+
+                    <div class="pagination-block mx-3">
+
+                        <ul class="pagination">
+
+                            <!-- Previous page arrow -->
+                            {% if fruits.has_previous %}
+                                <li class="page-item"><a class="page-link" href="?page={{ fruits.previous_page_number }}">&laquo;</a></li>
+                            {% else %}
+                                <li class="page-item disabled"><a class="page-link" href="#" >&laquo;</a></li>
+                            {% endif %}
+
+                            <!-- Page numbers -->
+                            {% for i in fruits.paginator.page_range %}
+                                <!-- Active page -->
+                                {% if fruits.number == i %}
+                                    <li class="page-item active"><a class="page-link" href="#">{{ i }}</a></li>
+                                <!-- Inactive pages -->
+                                {% else %}
+                                    <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                                {% endif %}
+                            {% endfor %}
+
+                            <!-- Next page arrow -->
+                            {% if fruits.has_next %}
+                                <li class="page-item"><a class="page-link" href="?page={{ fruits.next_page_number }}">&raquo;</a></li>
+                            {% else %}
+                                <li class="page-item disabled"><a class="page-link" href="#" >&raquo;</a></li>
+                            {% endif %}
+
+                        </ul>
+
+                    </div>
+
+                {% endif %}
+
+            <!-- If there is no stock, display a notification -->
 
             {% else %}
 
