--- a/static/css/base.css
+++ b/static/css/base.css
@@ -110,11 +110,11 @@ td {
 }
 
 .nav-link:hover {
-    background-color: #e2eaee;
+    background-color: #e9ecef;
   }
 
 .nav-link-active {
-    background-color: #e2eaee;
+    background-color: #e9ecef;
 }
 
 .main-col {
