--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
 
             {% if user.is_authenticated %}
                 <p>
-                    Feel free to add some &#127819;&#127823;&#127818;, generate some sales, and check out the stats.
+                    Feel free to add some &#127819;&#127823;&#127818;, generate some sales, and check out your stats.
                 </p>
             {% endif %}
 
