--- a/templates/stats/stats_list.html
+++ b/templates/stats/stats_list.html
@@ -14,7 +14,7 @@
                 <!-- The total proceeds -->
 
                 <div class="mb-5">
-                    <h5>Total sales: <span id="total-sales">¥{{ total_proceeds|intcomma }}</span></h5>
+                    <h5>Total sales: <span class="total-figure">¥{{ total_proceeds|intcomma }}</span></h5>
                 </div>
 
                 <!-- Statistics for last three days -->
