--- a/templates/stats/stats_list.html
+++ b/templates/stats/stats_list.html
@@ -29,8 +29,8 @@
 
                             <thead class="table-header-bg-3">
                                 <tr>
-                                    <th scope="col">Day</th>
-                                    <th scope="col">Proceeds</th>
+                                    <th scope="col" style="width: 12%">Day</th>
+                                    <th scope="col" style="width: 12%">Proceeds</th>
                                     <th scope="col">Breakdown (descending order of proceeds, quantities in parentheses)</th>
                                 </tr>
                             </thead>
@@ -67,8 +67,8 @@
 
                             <thead class="table-header-bg-4">
                                 <tr>
-                                    <th scope="col">Month</th>
-                                    <th scope="col">Proceeds</th>
+                                    <th scope="col" style="width: 12%">Month</th>
+                                    <th scope="col" style="width: 12%">Proceeds</th>
                                     <th scope="col">Breakdown (descending order of proceeds, quantities in parentheses)</th>
                                 </tr>
                             </thead>
